<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile" />

    <TextView
        android:id="@+id/fullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="54dp"
        android:fontFamily="@font/stinger_wide_trial_regular"
        android:text="@string/name"
        android:textColor="@color/textColor"
        android:textSize="25sp"
        android:textStyle="normal"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/stinger_fit_trial_regular"
        android:text="@string/Title"
        android:textColor="@color/textColor"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/fullname" />

    <TextView
        android:id="@+id/aboutMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/stinger_fit_trial_regular"
        android:text="@string/about_me"
        android:textColor="@color/textHeadingColor"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/description"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/zabal_semibold"
        android:text="@string/description"
        android:textColor="@color/textHeadingColor"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutMe" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="57dp"
        android:fontFamily="@font/stinger_fit_trial_regular"
        android:text="@string/connect_me"
        android:textColor="@color/dark_purple"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <TextView
        android:id="@+id/slackHandle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/zabal_semibold"
        android:text="@string/slack_handle"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:srcCompat="@drawable/slack_logo" />

    <ImageView
        android:id="@+id/imageViewGithub"
        android:layout_width="22dp"
        android:layout_height="28dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:srcCompat="@drawable/github"
        app:tint="@color/dark_purple" />

    <TextView
        android:id="@+id/githubHandle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="21dp"
        android:fontFamily="@font/zabal_semibold"
        android:text="@string/github_handle"
        app:layout_constraintStart_toEndOf="@+id/imageViewGithub"
        app:layout_constraintTop_toBottomOf="@+id/slackHandle" />

    <Button
        android:id="@+id/editButton"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="29dp"
        android:backgroundTint="@color/iconColor"
        android:drawableLeft="@drawable/baseline_edit_24"
        android:includeFontPadding="true"
        android:paddingLeft="12dp"
        android:text="Edit"
        app:cornerRadius="10dp"
        app:iconPadding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewGithub" />

</androidx.constraintlayout.widget.ConstraintLayout>